--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.0.3"
 flask-sqlalchemy = "^3.1.1"
 flask-jwt-extended = "^4.6.0"
 python-dotenv = "^1.0.1"
+gunicorn = "^22.0.0"
 
 
 [build-system]
