--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask-sqlalchemy = "^3.1.1"
 flask-jwt-extended = "^4.6.0"
 python-dotenv = "^1.0.1"
 gunicorn = "^22.0.0"
+flask-cors = "^4.0.1"
 
 
 [build-system]
