--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 blinker==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+flask-cors==4.0.1 ; python_version >= "3.10" and python_version < "4.0"
 flask-jwt-extended==4.6.0 ; python_version >= "3.10" and python_version < "4"
 flask-sqlalchemy==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
 flask==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
