--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flask-jwt-extended = "^4.6.0"
 python-dotenv = "^1.0.1"
 gunicorn = "^22.0.0"
 flask-cors = "^4.0.1"
+mysqlclient = "^2.2.4"
 
 
 [build-system]
