--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ gunicorn==22.0.0 ; python_version >= "3.10" and python_version < "4.0"
 itsdangerous==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
+mysqlclient==2.2.4 ; python_version >= "3.10" and python_version < "4.0"
 packaging==24.0 ; python_version >= "3.10" and python_version < "4.0"
 pyjwt==2.8.0 ; python_version >= "3.10" and python_version < "4"
 python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
